# shenzhen-solitaire-solver

./: .gitignore  ChangeLog.md  LICENSE  README.md  hie.yaml  package.yaml  shenzhen-solitaire-solver.cabal  stack.yaml
app/: Main.hs
src/: CropInfo.hs  Lib.hs  ScreenCapture.hs  SymbolRecognition.hs  Util.hs  XDoTool.hs
src/Game/: AI.hs  Actions.hs  FromScreen.hs  State.hs
src/Geometry/: BoardPositions.hs  BoardRegions.hs  Buttons.hs  CardStacks.hs
