cabal-version: 1.12

name:           shenzhen-solitaire-solver
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Lacaranian/shenzhen-solitaire-solver#readme>
homepage:       https://github.com/Lacaranian/shenzhen-solitaire-solver#readme
bug-reports:    https://github.com/Lacaranian/shenzhen-solitaire-solver/issues
author:         Ben Elliott
maintainer:     benjam.elliott@gmail.com
copyright:      2021 Ben Elliott
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/shenzhen-solitaire-solver

library
  exposed-modules:
      CropInfo
      Game.FromScreen
      Game.State
      Geometry.BoardPositions
      Geometry.BoardRegions
      Geometry.Buttons
      Geometry.CardStacks
      Lib
      ScreenCapture
      SymbolRecognition
      XDoTool
  other-modules:
      Paths_shenzhen_solitaire_solver
  hs-source-dirs:
      src
  build-depends:
      array >=0.5.4 && <0.5.5
    , base >=4.7 && <5
    , directory >=1.3 && <1.4
    , gtk >=0.15 && <0.16
    , process >=1.6 && <1.7
    , text >=1.2 && <1.3
  default-language: Haskell2010

executable shenzhen-solitaire-solver-exe
  main-is: Main.hs
  other-modules:
      Paths_shenzhen_solitaire_solver
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array >=0.5.4 && <0.5.5
    , base >=4.7 && <5
    , directory >=1.3 && <1.4
    , gtk >=0.15 && <0.16
    , process >=1.6 && <1.7
    , shenzhen-solitaire-solver
    , text >=1.2 && <1.3
  default-language: Haskell2010

test-suite shenzhen-solitaire-solver-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_shenzhen_solitaire_solver
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      array >=0.5.4 && <0.5.5
    , base >=4.7 && <5
    , directory >=1.3 && <1.4
    , gtk >=0.15 && <0.16
    , process >=1.6 && <1.7
    , shenzhen-solitaire-solver
    , text >=1.2 && <1.3
  default-language: Haskell2010
